@@ -1,3 +1,8 @@
+2019-07-20  Dirk Eddelbuettel  <edd@debian.org>
+
+	* src/anytime.cpp (r_stringToTime): Use Rcpp::Function to access R
+	functionality instead of using RApiDatetime
+
 2019-07-17  Dirk Eddelbuettel  <edd@debian.org>
 
 	* src/anytime.cpp: A few minor #nocov additions
